# cav_take_home

./: .gitignore  MacOS.md  README.md  TermsAndLinks.md  WSL.md  panel.json
src/imu_jitter/: CMakeLists.txt  package.xml
src/imu_jitter/include/imu_jitter/: jitter_node.hpp
src/imu_jitter/src/: jitter_node.cpp
src/lap_time/: CMakeLists.txt  package.xml
src/lap_time/include/lap_time/: lap_time_node.hpp
src/lap_time/src/: lap_time_node.cpp
src/launch/: metric_output.xml
src/msgs/cavalier-msgs/: README.md
src/msgs/cavalier-msgs/scripts/: analyze_indy_rosbag.py  fixup_raceline.py  show_speed_loss.py
src/msgs/cavalier-msgs/uva_iac_msgs/: CMakeLists.txt  package.xml
src/msgs/cavalier-msgs/uva_iac_rviz/: CMakeLists.txt  package.xml  plugin_description.xml
src/msgs/cavalier-msgs/uva_iac_rviz/include/uva_iac_rviz/: batch_detection_display.hpp  batch_tracks_display.hpp  polynomial_display.hpp  polynomial_visual.hpp
src/msgs/cavalier-msgs/uva_iac_rviz/include/uva_iac_rviz/objects/: flat_color_line.hpp
src/msgs/cavalier-msgs/uva_iac_rviz/src/: batch_detection_display.cpp  batch_tracks_display.cpp  polynomial_display.cpp  polynomial_visual.cpp
src/msgs/deep_orange_msgs/: CMakeLists.txt
src/msgs/deep_orange_msgs/msg/: Autonomy.msg  BaseToCarTiming.msg  CtReport.msg  MpcCost.msg  MpcStatus.msg  MpcTuning.msg  PtReport.msg  RcToCt.msg  TireReportSmall.msg  WheelSlips.msg
src/msgs/localization_msgs/: CMakeLists.txt  package.xml
src/msgs/localization_msgs/msg/: AttitudeMeasurement.msg  ImuHealth.msg  LocalizationHealth.msg  MeasurementFrequency.msg  MeasurementHealth.msg  VehicleState.msg
src/msgs/raptor_dbw_msgs/: CMakeLists.txt
src/msgs/raptor_dbw_msgs/can_dbc_parser/include/can_dbc_parser/: Dbc.hpp  DbcBuilder.hpp  DbcMessage.hpp  DbcSignal.hpp  DbcUtilities.hpp  LineParser.hpp
src/msgs/raptor_dbw_msgs/can_dbc_parser/src/: Dbc.cpp  DbcBuilder.cpp  DbcMessage.cpp  DbcSignal.cpp  LineParser.cpp
src/msgs/raptor_dbw_msgs/msg/: Brake2Report.msg  BrakeExtdReport.msg  GearCmd.msg  SteeringExtendedReport.msg
src/msgs/raptor_dbw_msgs/pdu/include/pdu/: pdu.hpp
src/msgs/raptor_dbw_msgs/pdu/launch/: pdu_launch.py
src/msgs/raptor_dbw_msgs/pdu/src/: node.cpp  pdu.cpp
src/msgs/raptor_dbw_msgs/raptor_dbw_can/: CMakeLists.txt  package.xml
src/msgs/raptor_dbw_msgs/raptor_dbw_can/include/raptor_dbw_can/: DbwNode.hpp  dispatch.hpp
src/msgs/raptor_dbw_msgs/raptor_dbw_can/launch/: CAN1-INDY-V14.dbc  CAN1-INDY-V20.dbc  CAN1-INDY-V23.dbc  can_drivers.launch.py  raptor_dbw_can_launch.py  raptor_dbw_can_launch_entire.py
src/msgs/raptor_dbw_msgs/raptor_dbw_can/src/: DbwNode.cpp  node.cpp
src/msgs/raptor_dbw_msgs/raptor_dbw_joystick_demo/include/: JoystickDemo.hpp
src/msgs/raptor_dbw_msgs/raptor_dbw_joystick_demo/launch/: dbw_joystick_launch.py
src/msgs/raptor_dbw_msgs/raptor_dbw_joystick_demo/src/: JoystickDemo.cpp  node.cpp
src/msgs/raptor_dbw_msgs/raptor_dbw_msgs/msg/: DashSwitches.msg  SteeringExtendedReport.msg
src/take_home_node/: CMakeLists.txt  package.xml
src/take_home_node/include/take_home_node/: take_home.hpp
src/take_home_node/src/: take_home.cpp
src/trajectory_propagator/: CMakeLists.txt  package.xml
src/trajectory_propagator/config/: params.yaml
src/trajectory_propagator/include/trajectory_propagator/: trajectory_propagator.hpp
src/trajectory_propagator/launch/: trajectory_propagator.launch.py
src/trajectory_propagator/src/: trajectory_propagator.cpp
src/wheel_slip_node/: CMakeLists.txt  package.xml
src/wheel_slip_node/include/wheel_slip_node/: slip_node.hpp
src/wheel_slip_node/src/: slip_node.cpp
